[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/VCR.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/pauseAndSettings/pause.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 0.403922 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="pause" type="Control" parent="."]
pause_mode = 2
margin_right = 480.0
margin_bottom = 272.0
script = ExtResource( 2 )

[node name="bg" type="Panel" parent="pause"]
margin_right = 480.0
margin_bottom = 272.0
custom_styles/panel = SubResource( 1 )

[node name="logo" type="Label" parent="pause"]
margin_left = 24.0
margin_top = 24.0
margin_right = 294.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "VitaCubes"
align = 1

[node name="resumeButton" type="Button" parent="pause"]
margin_left = 24.0
margin_top = 176.0
margin_right = 102.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 3 )
text = "Resume"
flat = true
align = 0

[node name="settingsButton" type="Button" parent="pause"]
margin_left = 24.0
margin_top = 200.0
margin_right = 124.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
flat = true
align = 0

[node name="exitButton" type="Button" parent="pause"]
margin_left = 24.0
margin_top = 224.0
margin_right = 124.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true
align = 0
